Webcamoid 9.2.1:

- Disabled binary build with libVLC in Windows since some anti-malware software
  detects its usage as malware even though is clean. You can still build
  Webcamoid with VLC support from Cmake command options.
- Build GNU/Linux binaries from Debian, this give a bit wider range of
  supported distros.

Webcamoid 9.2.0:

- Webcamoid ported to Qt6.
- Added PipeWire video capture support.
- Added Xlib screen capture plugin.
- Added desktop capture using FFmpeg.
- Added option to show or hide the mouse cursor on screen capture.
- Qt screen capture plugin is now using QScreenCapture.
- Added ColorKey plugin.
- Added support for extended controls in V4L2.
- Fixed crash in Windows when the camera returns an invalid frame rate.
- Add support for h264 in DirectShow and MediaFoundation.
- Removed x86 builds in in Windows.
- Attend to screen orientation (issue #661).
- Torch working in Android.
- Fixed font scaling in Android.
- Added AdMob support.
- Fixed ARM 64 packages.
- Build DEB and RPM packages.
- Fixed saving the selected camera format (issue #693).
- Added a debug log to the preferences dialog.
- Added options for enabling/disabling interprocess optimizations (issue #702).
- Fixed virtual camera support in FreeBSD.
- Do not show the video outputs if the virtual camera is not supported.

Webcamoid 9.1.1:

- Removed Qml import line that prevented UI to load.
- Using common AppID for all platforms.
- Fixed ARM packages upload on release.

Webcamoid 9.1.0:

- Redesigned UI to work in smaler screens.
- Now providing ARM packages for GNU/Linux.
- Webcamoid is mostly working fine in Android, with minimum bugs.
- Sustituting Mac native code with third-party libraries:

  CoreAudio -> PortAudio and SDL
  AVFoundation -> FFmpeg (Screen capture)
  AVFoundation -> QCamera (Camera capture)

  this way it will make much easier for me to maintain the code.
  Also not providing anymore pre-compiled binary packages.